Went from one sentence to a target response

--- a/index.html
+++ b/index.html
@@ -5,18 +5,66 @@
         <script src="https://unpkg.com/jspsych@7.3.3"></script>
         <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.2"></script>
         <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
+        <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.2"></script>
+        <script src="jspsych/modified-image-plugins.js"></script>
     </head>
     <body></body>
     <script>
         const jsPsych = initJsPsych();
 
-const hello_trial = {
+var sentence = {
   type: jsPsychHtmlKeyboardResponse,
-  stimulus: 'Hello world!',
-  choices: ['Y','N'],
-  trial_duration : 500
+  stimulus: 'I want to see a foobly mipp',
+  choices: [' '],
+  //trial_duration : 500
 }
 
-jsPsych.run([hello_trial]);
+var attention = {
+    type: jsPsychSurveyText,
+    questions: [
+    {prompt: "Type any ONE novel word from the previous sentence:"}]
+}
+
+var association = {
+    type: jsPsychSurveyText,
+    questions: [{prompt: "foobly"}]
+}
+
+var fixation = {
+  type: jsPsychHtmlKeyboardResponse,
+  stimulus: "+",
+  trial_duration : 500,
+  choices : "NO_KEYS"
+}
+
+var image = {
+  type: jsPsychImageKeyboardResponse,
+  stimulus: "applehorse.png",
+  trial_duration : 500,
+  choices : "NO_KEYS",
+  stimulus_width : 500,
+  maintain_aspect_ratio : true,
+  prompt: "<br><br>"
+}
+
+var prime = {
+  type: jsPsychImageKeyboardResponse,
+  stimulus: "applehorse.png",
+  trial_duration : 300,
+  choices : "NO_KEYS",
+  stimulus_width : 500,
+  maintain_aspect_ratio : true, 
+  prompt : "<br>foobly<br>"
+}
+
+var target = {
+  type: jsPsychImageKeyboardResponse,
+  stimulus: "applehorse.png",
+  choices : ['A','L'],
+  stimulus_width : 500,
+  maintain_aspect_ratio : true
+}
+
+jsPsych.run([sentence, attention, association, fixation, image, prime, target]);
     </script>
 </html>
