--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" type="text/css" />
         <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.2"></script>
         <script src="jspsych/modified-image-plugins.js"></script>
+        <script src="sentences.js"></script>
+        <script src="association.js"></script>
+        <script src="priming.js"></script>
     </head>
     <body></body>
     <script>
@@ -14,9 +17,15 @@
 
 var sentence = {
   type: jsPsychHtmlKeyboardResponse,
-  stimulus: 'I want to see a foobly mipp',
+  stimulus: jsPsych.timelineVariable('sentence'),
   choices: [' '],
-  //trial_duration : 500
+  trial_duration : 10
+}
+
+var training_procedure = {
+  timeline: [sentence],
+  timeline_variables: sentences,
+  randomize_order: true
 }
 
 var attention = {
@@ -27,7 +36,19 @@ var attention = {
 
 var association = {
     type: jsPsychSurveyText,
-    questions: [{prompt: "foobly"}]
+    questions: [{prompt: jsPsych.timelineVariable('cue')}],
+}
+
+var association_procedure = {
+  timeline: [association],
+  timeline_variables: association_cues,
+  randomize_order: true,
+  repetitions: 3
+}
+
+var training_plus_association = {
+  timeline: [training_procedure, association_procedure],
+  repetitions: 3
 }
 
 var fixation = {
@@ -39,7 +60,7 @@ var fixation = {
 
 var image = {
   type: jsPsychImageKeyboardResponse,
-  stimulus: "applehorse.png",
+  stimulus: jsPsych.timelineVariable('image_path'),
   trial_duration : 500,
   choices : "NO_KEYS",
   stimulus_width : 500,
@@ -49,7 +70,7 @@ var image = {
 
 var prime = {
   type: jsPsychImageKeyboardResponse,
-  stimulus: "applehorse.png",
+  stimulus: jsPsych.timelineVariable('image_path'),
   trial_duration : 300,
   choices : "NO_KEYS",
   stimulus_width : 500,
@@ -59,12 +80,13 @@ var prime = {
 
 var target = {
   type: jsPsychImageKeyboardResponse,
-  stimulus: "applehorse.png",
+  stimulus: jsPsych.timelineVariable('image_path'),
   choices : ['A','L'],
   stimulus_width : 500,
   maintain_aspect_ratio : true
 }
 
-jsPsych.run([sentence, attention, association, fixation, image, prime, target]);
+jsPsych.run([training_plus_association])
+//jsPsych.run([sentence, attention, association, fixation, image, prime, target]);
     </script>
 </html>
