--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="association.js"></script>
         <script src="priming.js"></script>
         <script src="https://unpkg.com/@jspsych/plugin-instructions@1.1.3"></script>
+        <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.2"></script>
+
 
     </head>
     <body></body>
@@ -27,6 +29,18 @@
 
   var id = Math.floor(Math.random() * 1000000000);
   console.log("id=", id)
+
+  //tag all trials with id
+
+  jsPsych.data.addProperties({
+    ID: id
+  });
+
+  var preload = {
+    type:jsPsychPreload,
+    auto_preload: true,
+    images: ['horseapple.png', 'applehorse.png']
+  }
 
 var initial_instructions = {
   type: jsPsychInstructions,
@@ -168,7 +182,7 @@ var slow_experiment_trial = {
 var fixation = {
   type: jsPsychHtmlKeyboardResponse,
   stimulus: "+",
-  trial_duration : 500,
+  trial_duration : 10,
   choices : "NO_KEYS",
   data: {
         typeoftrial: 'fixation',
@@ -178,7 +192,7 @@ var fixation = {
 var image = {
   type: jsPsychImageKeyboardResponse,
   stimulus: jsPsych.timelineVariable('image_path'),
-  trial_duration : 500,
+  trial_duration : 10,
   choices : "NO_KEYS",
   stimulus_width : 500,
   maintain_aspect_ratio : true,
@@ -191,7 +205,7 @@ var image = {
 var prime = {
   type: jsPsychImageKeyboardResponse,
   stimulus: jsPsych.timelineVariable('image_path'),
-  trial_duration : 300,
+  trial_duration : 10,
   choices : "NO_KEYS",
   stimulus_width : 500,
   maintain_aspect_ratio : true, 
@@ -209,6 +223,7 @@ var target = {
   choices : ['A','L'],
   stimulus_width : 500,
   maintain_aspect_ratio : true,
+  trial_duration: 10,
   prompt : function(){
     return "<span style= 'font-size:200%'><br>" + String(jsPsych.timelineVariable('target_word')) + "<br></span>";
   },
@@ -219,6 +234,7 @@ var target = {
         type: jsPsych.timelineVariable('type'),
         relatedness: jsPsych.timelineVariable('relatedness'),
         correct_key: jsPsych.timelineVariable('correct_key'),
+        block_number: jsPsych.timelineVariable('block_number')
   },
   on_finish: function(data){
     data.correct = jsPsych.pluginAPI.compareKeys(data.response, data.correct_key);
@@ -237,14 +253,29 @@ var priming_feedback = {
   }
 }
 
-var priming_proc = {
+var practice_proc = {
   timeline: [fixation, image, prime, target, priming_feedback],
   timeline_variables: practice_stimuli,
   randomize_order: true
 }
 
+var priming_proc = {
+  timeline: [fixation, image, prime, target, priming_feedback],
+  timeline_variables: test_stimuli,
+  randomize_order: true,
+  repetitions: 2
+}
 
-jsPsych.run([training_procedure])
-//jsPsych.run([sentence, attention, association, fixation, image, prime, target]);
+var thank_you = {
+  type: jsPsychHtmlKeyboardResponse,
+  stimulus: 'Thank you! You can press any key to end the experiment.',
+  data: {
+    typeoftrial: 'thank_you'
+  },
+}
+
+
+//jsPsych.run([thank_you])
+jsPsych.run([preload, initial_instructions, training_plus_association, priming_instructions, practice_proc, priming_proc, thank_you]);
     </script>
 </html>
