--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         const jsPsych = initJsPsych(
           {
             on_finish: function(data) {
-                jsPsych.data.displayData();
+               // jsPsych.data.displayData();
             }
             }
         );
@@ -45,9 +45,9 @@
 var initial_instructions = {
   type: jsPsychInstructions,
   pages: [
-    'page 1 instructions',
-    'page 2 instructions',
-    'page 3 instructions.'
+    'How do we learn new words? <br><br>Most of the words we know we learned spontaneously, like when hearing a novel word while listening to someone speaking, watching TV, or while reading.<br><br> In this study, your task will be to simply read sentences containing new words. After the reading session, we will ask you to use these novel words in a word game. <br><br>This experiment has three blocks. Each block has reading and testing session.<br><br> Are you ready to start?',
+'We will present one sentence at a time. <br><br>Read them carefully. When you are ready, press space bar for the next sentence. <br><br>In order to make sure you are reading carefully, there will be surprise questions during the reading session. <br><br>You will be asked to type in the novel words from the last sentence you read. <br><br>Minor spelling mistakes will be tolerated. Type in your answer and press enter when you are ready to move on to the next sentence.',
+'You will now read the sentences. <br> Press SPACEBAR when you have read the sentence and want to move on to the next.'
   ],
   show_clickable_nav: true,
   data: {
@@ -58,7 +58,7 @@ var initial_instructions = {
 var association_instructions = {
   type: jsPsychInstructions,
   pages: [
-    'Done with sentences. Association time.',
+  'You are done with the first part! <br><br>In this segment, you will be asked to type in the first word that comes to your mind when you read a given word. <br><br>Keep in mind that in this game, you can only use the words you read about in the reading session. <br><br>Type in your answer and press enter when you are ready for the next one.',
   ],
   show_clickable_nav: true,
   data: {
@@ -69,7 +69,8 @@ var association_instructions = {
 var priming_instructions = {
   type: jsPsychInstructions,
   pages: [
-    'Priming task about to begin.',
+  'This is our final game. <br><br>You will be presented with slides showing an apple and a horse. <br><br>Your task will be to respond as quickly as possible, on which side of the screen the apple or the horse is shown. <br><br>On the same screen, with pictures, two words will be presented. Read the first word, but respond in accordance with the second word. <br><br>For example, if you see words “boff” and “apple”, respond where the apple is. <br><br>If you see words “boff” and “horse”, respond where the horse is.',
+'You will press A if you want to choose the picture on the left and <br><br> L if you want to choose the picture on the right'
   ],
   show_clickable_nav: true,
   data: {
@@ -83,7 +84,6 @@ var sentence = {
   type: jsPsychHtmlKeyboardResponse,
   stimulus: jsPsych.timelineVariable('sentence'),
   choices: [' '],
-  trial_duration : 10,
   on_finish: function(data) {
     sentence_number = (sentence_number + 1) %40;
     console.log("sentence_number= " + sentence_number)
@@ -147,6 +147,7 @@ var training_procedure = {
 
 var association = {
     type: jsPsychSurveyText,
+    preamble: 'Type in the first word that comes to mind when you see the word below:',
     questions: [{prompt: jsPsych.timelineVariable('cue')}],
   data: {
         typeoftrial: 'association',
@@ -182,7 +183,7 @@ var slow_experiment_trial = {
 var fixation = {
   type: jsPsychHtmlKeyboardResponse,
   stimulus: "+",
-  trial_duration : 10,
+  trial_duration : 500,
   choices : "NO_KEYS",
   data: {
         typeoftrial: 'fixation',
@@ -192,11 +193,13 @@ var fixation = {
 var image = {
   type: jsPsychImageKeyboardResponse,
   stimulus: jsPsych.timelineVariable('image_path'),
-  trial_duration : 10,
+  trial_duration : 500,
   choices : "NO_KEYS",
   stimulus_width : 500,
   maintain_aspect_ratio : true,
-  prompt: "<br><br>",
+  prompt : function(){
+    return "<span style= 'font-size:200%'><br><br></span>";
+  },
   data: {
         typeoftrial: 'image',
   }
@@ -205,7 +208,7 @@ var image = {
 var prime = {
   type: jsPsychImageKeyboardResponse,
   stimulus: jsPsych.timelineVariable('image_path'),
-  trial_duration : 10,
+  trial_duration : 300,
   choices : "NO_KEYS",
   stimulus_width : 500,
   maintain_aspect_ratio : true, 
@@ -223,7 +226,6 @@ var target = {
   choices : ['A','L'],
   stimulus_width : 500,
   maintain_aspect_ratio : true,
-  trial_duration: 10,
   prompt : function(){
     return "<span style= 'font-size:200%'><br>" + String(jsPsych.timelineVariable('target_word')) + "<br></span>";
   },
@@ -275,7 +277,7 @@ var thank_you = {
 }
 
 
-//jsPsych.run([thank_you])
-jsPsych.run([preload, initial_instructions, training_plus_association, priming_instructions, practice_proc, priming_proc, thank_you]);
+jsPsych.run([priming_proc])
+//jsPsych.run([preload, initial_instructions, training_plus_association, priming_instructions, practice_proc, priming_proc, thank_you]);
     </script>
 </html>
