--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ var thank_you = {
 }
 
 
-//jsPsych.run([priming_proc])
-jsPsych.run([preload, initial_instructions, training_plus_association, priming_instructions, practice_proc, priming_proc, thank_you]);
+jsPsych.run([priming_proc])
+//jsPsych.run([preload, initial_instructions, training_plus_association, priming_instructions, practice_proc, priming_proc, thank_you]);
     </script>
 </html>
